--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,391 +1,750 @@
 /*
     Configurações gerais
 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap");
 
 :root {
-    --bgcolor: #000;
-    --decopri: #b28756;
-    --fgColor: #fff;
-    --menusele: #D3D3D3;
-    --descColorLight: #a7a7a7;
-    --descColorDark: #979797;
-    --bgDefLight: #f7f7f7;
-    --titColorLight: #000;
-    --bgDefDark: #000;
-    --titColorDark: #fff;
-    --textService: #999;
-    --bgFiltroProj: #ebebeb;
-    --fgFiltroProj: #5f5f5f;
-    --linFiltroProj: #d3d3d3;
-    --destaMenu: #ccc;
+  --bgcolor: #000;
+  --decopri: #b28756;
+  --fgColor: #fff;
+  --menusele: #d3d3d3;
+  --descColorLight: #a7a7a7;
+  --descColorDark: #979797;
+  --bgDefLight: #f7f7f7;
+  --titColorLight: #000;
+  --bgDefDark: #000;
+  --titColorDark: #fff;
+  --textService: #999;
+  --bgFiltroProj: #ebebeb;
+  --fgFiltroProj: #5f5f5f;
+  --linFiltroProj: #d3d3d3;
+  --destaMenu: #ccc;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
 .button {
-    display: inline-block;
-    background-color: var(--decopri);
-    color: var(--fgColor);
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 10px 30px;
-    margin-top: 30px;
-    border-radius: 20px;
+  display: inline-block;
+  background-color: var(--decopri);
+  color: var(--fgColor);
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  text-decoration: none;
+  padding: 10px 30px;
+  margin-top: 30px;
+  border-radius: 20px;
+}
+
+.button--dark {
+  background-color: var(--bgDefDark);
 }
 
 /*
     Template das sections
 */
 .default {
-    width: 100vw;
-    padding-top: 50px;
-    padding-bottom: 50px;
+  width: 100vw;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .default .section-title,
 .default .section-desc {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 600;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .default .section-title {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .default .section-desc {
-    font-size: 14px;
-    color: var(--descColorLight);
-    margin-top: 10px;
-    margin-bottom: 40px;
+  font-size: 14px;
+  color: var(--descColorLight);
+  margin-top: 10px;
+  margin-bottom: 40px;
 }
 
 .default .section-body {
-    max-width: 1140px;
-    margin: auto;
-    min-height: 100px;
+  max-width: 1140px;
+  margin: auto;
+  min-height: 100px;
 }
 
 .default.light {
-    background-color: var(--bgDefLight);
+  background-color: var(--bgDefLight);
 }
 
 .default.light .section-title {
-    color: var(--titColorLight);
+  color: var(--titColorLight);
 }
 
 .default.dark {
-    background-color: var(--bgDefDark);
+  background-color: var(--bgDefDark);
 }
 
 .default.dark .section-desc {
-    color: var(--descColorDark);
+  color: var(--descColorDark);
 }
 
 .default.dark .section-title {
-    color: var(--titColorDark);
+  color: var(--titColorDark);
 }
 
 /*
     Cabeçalho
 */
 header {
-    height: 100px;
-    background-color: var(--bgcolor);
-    color: var(--fgColor);
+  height: 100px;
+  background-color: var(--bgcolor);
+  color: var(--fgColor);
 }
 
 .header {
-    max-width: 1140px;
-    height: 100px;
-    margin: auto;
-    display: flex;
-    align-items: center;
+  max-width: 1140px;
+  height: 100px;
+  margin: auto;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-    width: 100px;
+  width: 100px;
 }
 
 .logoimg {
-    width: 80px;
-    height: 80px;
-    background-image: url("../image/logo.png");
-    background-repeat: no-repeat;
-    background-position: center;
+  width: 80px;
+  height: 80px;
+  background-image: url("../image/logo.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 /*
     Menu
 */
 .menu {
-    flex: 1;
-    display: flex;
-    justify-content: flex-end;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .menu ul,
 .menu li {
-    list-style: none;
+  list-style: none;
 }
 
 .menu ul {
-    display: flex;
+  display: flex;
 }
 
 .menu li a {
-    color: var(--fgColor);
-    text-transform: uppercase;
-    font-weight: 600;
-    text-decoration: none;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    border-bottom: 5px solid var(--bgcolor);
+  color: var(--fgColor);
+  text-transform: uppercase;
+  font-weight: 600;
+  text-decoration: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  border-bottom: 5px solid var(--bgcolor);
 }
 
 .menu li a:hover {
-    border-bottom: 5px solid var(--decopri);
-    color: var(--menusele);
+  border-bottom: 5px solid var(--decopri);
+  color: var(--menusele);
 }
 
 .menu .active a {
-    border-bottom: 5px solid var(--decopri);
+  border-bottom: 5px solid var(--decopri);
 }
 
 /*
     Banner - Sliders
 */
 .banner {
-    height: calc(100vh - 100px);
-    background-color: #131313;
-    background-image: url("../image/bg.jpg");
-    background-size: cover;
-    background-position: bottom;
-    overflow: hidden;
+  height: calc(100vh - 100px);
+  background-color: #131313;
+  background-image: url("../image/bg.jpg");
+  background-size: cover;
+  background-position: bottom;
+  overflow: hidden;
 }
 
 .banner .sliders {
-    width: 1000vw;
-    height: 100%;
+  width: 1000vw;
+  height: 100%;
 }
 
 .banner .slider {
-    width: calc(100vw + 4px);
-    height: 100%;
-    display: inline-block;
-    background-color: rgba(0,0,0,0.8);
-    margin-left: -4px;
+  width: calc(100vw + 4px);
+  height: 100%;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-left: -4px;
 }
 
 .banner .slidearea {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: var(--fgColor);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: var(--fgColor);
 }
 
 .banner h1 {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 50px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 50px;
 }
 
 .banner span {
-    color: var(--decopri);
+  color: var(--decopri);
 }
 
 .banner h2 {
-    text-transform: uppercase;
-    margin-top: 20px;
+  text-transform: uppercase;
+  margin-top: 20px;
 }
 
 .banner .sliders-pointers {
-    width: 100vw;
-    height: 20px;
-    position: absolute;
-    margin-top: -50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 20px;
+  position: absolute;
+  margin-top: -50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .banner .pointer {
-    width: 15px;
-    height: 15px;
-    border: 2px solid var(--decopri);
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
+  width: 15px;
+  height: 15px;
+  border: 2px solid var(--decopri);
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
 }
 
 .banner .pointer.active {
-    background-color: var(--decopri);
+  background-color: var(--decopri);
 }
 
 /*
     Section - About Us
 */
 .section-aboutus {
-    display: flex;
+  display: flex;
 }
 
 .section-aboutus--left {
-    flex: 1;
+  flex: 1;
 }
 
 .section-aboutus--left p {
-    font-size: 14px;
-    line-height: 25px;
+  font-size: 14px;
+  line-height: 25px;
 }
 
 .section-aboutus--right {
-    width: 520px;
-    text-align: center;
+  width: 520px;
+  text-align: center;
 }
 
 .section-aboutus--right img {
-    width: 480px;
-    box-shadow: 15px 15px 15px #aaa9a9;
+  width: 480px;
+  box-shadow: 15px 15px 15px #aaa9a9;
 }
 
 /*
     Section - Services
 */
 .section-services {
-    display: flex;
+  display: flex;
 }
 
 .section-service {
-    flex: 1;
-    text-align: center;
-    padding: 15px;
-    border-right: 1px solid var(--textService);
+  flex: 1;
+  text-align: center;
+  padding: 15px;
+  border-right: 1px solid var(--textService);
 }
 
 .section-service:first-child {
-    border-left: 1px solid var(--textService);
+  border-left: 1px solid var(--textService);
 }
 
 .section-service h4 {
-    color: var(--textService);
-    margin-top: 20px;
-    text-transform: uppercase;
-    font-size: 16px;
-    padding: 0 45px;
+  color: var(--textService);
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-size: 16px;
+  padding: 0 45px;
 }
 
 .section-service p {
-    color: var(--textService);
-    font-size: 13px;
-    margin-top: 10px;
+  color: var(--textService);
+  font-size: 13px;
+  margin-top: 10px;
 }
 
 /*
     Section - Projects
 */
 .section-projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .section-projects--filters {
-    border: 1px solid var(--linFiltroProj);
-    background-color: var(--bgFiltroProj);
-    border-radius: 30px;
-    display: inline-block;
-    padding: 0 20px;
+  border: 1px solid var(--linFiltroProj);
+  background-color: var(--bgFiltroProj);
+  border-radius: 30px;
+  display: inline-block;
+  padding: 0 20px;
 }
 
 .section-projects--filters ul,
 .section-projects--filters li {
-    list-style: none;
+  list-style: none;
 }
 
 .section-projects--filters li {
-    display: inline-block;
-    color: var(--fgFiltroProj);
-    padding: 20px 15px;
-    text-transform: uppercase;
-    font-size: 13px;
-    border-left: 1px solid var(--linFiltroProj);
-    border-bottom: 3px solid var(--bgFiltroProj);
-    cursor: pointer;
+  display: inline-block;
+  color: var(--fgFiltroProj);
+  padding: 20px 15px;
+  text-transform: uppercase;
+  font-size: 13px;
+  border-left: 1px solid var(--linFiltroProj);
+  border-bottom: 3px solid var(--bgFiltroProj);
+  cursor: pointer;
 }
 
 .section-projects--filters li:first-child {
-    border-left: 0;
+  border-left: 0;
 }
 
 .section-projects--filters li:hover,
 .section-projects--filters li.active {
-    border-bottom: 3px solid var(--decopri);
+  border-bottom: 3px solid var(--decopri);
 }
 
 .section-projects--photos {
-    width: 100vw;
-    max-width: 1140px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  width: 100vw;
+  max-width: 1140px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .section-projects--photo {
-    width: 280px;
+  width: 280px;
 }
 
 .section-projects--photoarea {
-    margin: 10px;
-    width: 260px;
-    height: 160px;
+  margin: 10px;
+  width: 260px;
+  height: 160px;
 }
 
 .section-projects--photoarea img {
-    width: inherit;
-    height: inherit;
+  width: inherit;
+  height: inherit;
 }
 
 .section-projects--photoinfo {
-    position: absolute;
-    background-color: rgba(0,0,0,0.7);
-    width: inherit;
-    height: inherit;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    color: var(--destaMenu);
-    flex-direction: column;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: inherit;
+  height: inherit;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  color: var(--destaMenu);
+  flex-direction: column;
 }
 
 .section-projects--photoinfo h5 {
-    font-size: 17px;
-    font-weight: 600;
+  font-size: 17px;
+  font-weight: 600;
 }
 
 .section-projects--photoinfo p {
-    font-size: 13px;
-    padding: 10px 40px;
-    line-height: 23px;
-    text-align: center;
+  font-size: 13px;
+  padding: 10px 40px;
+  line-height: 23px;
+  text-align: center;
 }
 
-.section-projects--photoarea:hover .section-projects--photoinfo{
-    display: flex;
-    cursor: pointer;
+.section-projects--photoarea:hover .section-projects--photoinfo {
+  display: flex;
+  cursor: pointer;
+}
+
+/*
+    Section - Team
+*/
+.bg-team {
+  background-image: url("../image/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 0;
+}
+
+.section-team-area {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.section-team {
+  overflow: hidden;
+  max-width: 880px;
+  margin: auto;
+}
+
+.section-team .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-team .slide {
+  width: 280px;
+  height: 100%;
+  min-height: 300px;
+  display: inline-block;
+  background-color: var(--fgColor);
+  margin-right: 20px;
+}
+
+.section-team .slidearea {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: var(--titColorLight);
+  padding: 30px;
+}
+
+.section-team-area .sliders-pointers {
+  margin-top: 30px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-team-area .pointer {
+  width: 15px;
+  height: 15px;
+  border: 2px solid var(--decopri);
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.section-team-area .pointer.active {
+  background-color: var(--decopri);
+}
+
+.section-team--avatar {
+  width: 150px;
+  height: auto;
+}
+
+.section-team--name {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 17px;
+  margin-top: 30px;
+}
+
+.section-team--role {
+  font-size: 14px;
+  color: var(--textService);
+  margin-top: 5px;
+}
+
+.section-team--social {
+  display: flex;
+  margin-top: 20px;
+}
+
+.section-team--social a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  background-color: var(--destaMenu);
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.section-team--social a:hover {
+  background-color: var(--decopri);
+}
+
+/*
+    Section - Testimonials
+*/
+.testimonials .section-body {
+  max-width: initial;
+}
+
+.section-testimonials {
+  overflow: hidden;
+}
+
+.section-testimonials .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-testimonials .slide {
+  width: 100vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.section-testimonials .slidearea {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-testimonials--avatar {
+  width: 100px;
+}
+
+.section-testimonials--name {
+  font-weight: bold;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.section-testimonials--role {
+  font-size: 14px;
+}
+
+.section-testimonials--quoteimg {
+  width: 20px;
+  margin-top: 30px;
+}
+
+.section-testimonials--quote {
+  margin-top: 10px;
+  font-size: 13px;
+  max-width: 700px;
+  color: var(--fgFiltroProj);
+  text-align: center;
+  line-height: 25px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.section-testimonials .sliders-pointers {
+  width: 100vw;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.section-testimonials .pointer {
+  width: 15px;
+  height: 15px;
+  border: 2px solid var(--decopri);
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.section-testimonials .pointer.active {
+  background-color: var(--decopri);
+}
+
+/*
+    Section - Companies
+*/
+.section-companies {
+  border-top: 1px solid var(--linFiltroProj);
+  border-bottom: 1px solid var(--linFiltroProj);
+}
+
+.section-companies--area {
+  display: flex;
+  align-items: center;
+}
+
+.section-company {
+  flex: 1;
+  text-align: center;
+  justify-content: center;
+}
+
+.section-company img {
+  margin-top: 20px;
+}
+
+/*
+    Section - Price
+*/
+.section-price {
+  display: flex;
+}
+
+.section-price--item {
+  flex: 1;
+  background-color: var(--fgColor);
+  margin-right: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.section-price--item:last-child {
+  margin-right: 0;
+}
+
+.section-price--item-name {
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.section-price--item-money {
+  font-weight: bold;
+  font-size: 22px;
+  margin-top: 10px;
+}
+
+.section-price--item-period {
+  color: var(--textService);
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.section-price--item-point {
+  font-size: 12px;
+}
+
+/*
+    Section - Premium
+*/
+.premium {
+  background-color: var(--fgColor) !important;
+  border-top: 1px solid var(--destaMenu);
+}
+
+.premium .section-body {
+  max-width: initial;
+}
+
+.section-premium {
+  overflow: hidden;
+}
+
+.section-premium a {
+  margin-top: 30px;
+}
+
+.section-premium .sliders {
+  width: 1000vw;
+  height: 100%;
+}
+
+.section-premium .slide {
+  width: 100vw;
+  height: 100%;
+  display: inline-block;
+}
+
+.section-premium .slidearea {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  max-width: 1140px;
+  border-bottom: 1px solid var(--destaMenu);
+  margin: auto;
+  padding-bottom: 40px;
+}
+
+.section-premium--left {
+  flex: 1;
+  text-align: right;
+}
+
+.section-premium--left img {
+  width: 300px;
+  margin-right: 30px;
+}
+
+.section-premium--right {
+  flex: 1;
+}
+
+.section-premium--item {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.section-premium--item img {
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+}
+
+.section-premium--item div {
+  flex: 1;
+  color: var(--textService);
+  line-height: 20px;
+}
+
+.section-premium--item div h4 {
+  color: var(--titColorLight);
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.section-premium .sliders-pointers {
+  width: 100vw;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.section-premium .pointer {
+  width: 15px;
+  height: 15px;
+  border: 2px solid var(--decopri);
+  border-radius: 50%;
+  margin-left: 5px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+.section-premium .pointer.active {
+  background-color: var(--decopri);
 }
