--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,3 +748,107 @@ header {
 .section-premium .pointer.active {
   background-color: var(--decopri);
 }
+
+/*
+	Section - Facts
+*/
+.section-facts {
+	display: flex;
+}
+
+.section-fact {
+	flex: 1;
+	text-align: center;
+	padding: 15px;
+}
+
+.section-fact h3 {
+	color: var(--decopri);
+	font-size: 45px;
+	margin-bottom: 6px;
+}
+
+.section-fact-line {
+	width: 20px;
+	border-bottom: 3px solid var(--textService);
+	margin: auto;
+}
+
+.section-fact h4 {
+	margin-top: 5px;
+	height: 50px;
+	text-transform: uppercase;
+	font-size: 18px;
+	color: var(--bgDefLight);
+}
+
+.section-fact p {
+	margin-top: 10px;
+	font-size: 13px;
+	color: var(--textService);
+}
+
+/*
+	Section - Share
+*/
+.section-share {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+	background-color: var(--fgColor);
+	color: var(--textService);
+}
+
+.section-share--legend {
+	display: flex;
+	align-items: center;
+	margin-right: 40px;
+}
+
+.section-share--legend img {
+	margin-right: 10px;
+}
+
+.section-share--item {
+	font-size: 12px;
+	margin-right: 20px;
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+}
+
+.section-share--icon {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: var(--destaMenu);
+	margin-right: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.section-share--icon img {
+	height: 12px;
+}
+
+.section-share--icon.twitter {
+	background-color: #34c5f0;
+}
+
+.section-share--icon.linkedin {
+	background-color: #127cb4;
+}
+
+.section-share--icon.facebook {
+	background-color: #336297;
+}
+
+.section-share--icon.googleplus {
+	background-color: #e74237;
+}
+
+.section-share--icon.pinterest {
+	background-color: #b71c29;
+}
