--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -852,3 +852,152 @@ header {
 .section-share--icon.pinterest {
 	background-color: #b71c29;
 }
+
+/*
+	Section - Contact
+*/
+.section-contact {
+	max-width: 450px;
+	margin: auto;
+	text-align: center;
+}
+
+.section-contact input[type=text],
+.section-contact textarea {
+	display: block;
+	width: 100%;
+	height: 40px;
+	border: 0;
+	background: transparent;
+	border-bottom: 1px solid var(--destaMenu);
+	outline: 0;
+	margin-top: 10px;
+}
+
+.section-contact textarea {
+	height: 100px;
+	resize: none;
+}
+
+.section-contact--split {
+	display: flex;
+}
+
+.section-contact--split input:first-child {
+	margin-right: 20px;
+}
+
+/*
+	Section - Map
+*/
+.section-map {
+	background-image: url('../image/mapa.png');
+	background-size: cover;
+	background-position: center;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.section-map--area {
+	width: 100vw;
+	max-width: 1140px;
+	margin: auto;
+}
+
+.section-map--info {
+	width: 50%;
+	padding: 30px;
+	background-color: var(--bgDefLight);
+	color: var(--titColorLight);
+}
+
+.section-map--info-item {
+	display: flex;
+	align-items: center;
+	color: var(--textService);
+	margin-bottom: 10px;
+}
+
+.section-map--info-item-img {
+	width: 30px;
+	height: 30px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	padding: 5px;
+	background-color: var(--textService);
+	border-radius: 15px;
+	margin-right: 15px;
+}
+
+.section-map--info-item-img img {
+	width: 15px;
+	height: auto;
+}
+
+/*
+	Footer
+*/
+footer {
+	background-color: var(--bgcolor);
+	padding: 20px;
+}
+
+.footer--area {
+	max-width: 1140px;
+	margin: auto;
+	color: var(--fgColor);
+	display: flex;
+}
+
+.footer--item {
+	flex: 1;
+}
+
+.footer-social {
+	display: flex;
+}
+
+.footer-social a {
+	display: flex;
+	width: 25px;
+	height: 25px;
+	background-color: var(--fgFiltroProj);
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+
+.footer-social a:hover {
+	background-color: var(--decopri);
+}
+
+.footer-social img {
+	height: 10px;
+}
+
+.footer--item.area2 {
+	color: var(--textService);
+	line-height: 20px;
+	font-size: 13px;
+	padding: 0 10px 10px 10px;
+}
+
+.footer--item.area3 form {
+	background-color: var(--fgFiltroProj);
+	text-align: center;
+	padding: 30px;
+}
+
+.footer--item.area3 input {
+	width: 100%;
+	height: 40px;
+	border: 0;
+	background: transparent;
+	border-bottom: 1px solid var(--destaMenu);
+	outline: 0;
+	color: var(--fgColor);
+	font-size: 14px;
+	text-align: center;
+}
